# BCIStainer_modified

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  results.txt  train.py
configs/stainer_basic_cmp/: exp3.yaml  exp5.yaml
libs/evaluate/: evaluator_basic.py  evaluator_cahr.py
libs/train_basic/: trainer.py
scripts/: evaluate.sh  train.sh
src/bcistainer/: evaluate.py  train.py
src/bcistainer/evaluate/: evaluator_basic.py  evaluator_cahr.py
src/bcistainer/train_basic/: dataset.py  trainer.py
src/bcistainer/train_cahr/: dataset.py  trainer.py
src/bcistainer/utils/: base.py
